# ner_county_detection

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  ner_api.err  pyproject.toml  requirements.txt
src/: main.py  main_app.py  nohup.out
src/core/ai/: enums.py  models.py
src/core/ai/fine_tune_model/ner_recognizer/: consts.py  llm_builder.py  models.py
src/core/ai/ner_recognizer/: enums.py  llm_builder.py  prompt_builder.py
src/core/ai/rag_llama/: consts.py  data_collection.py  rag_builder.py
src/core/data/: processed_data.json
src/core/fine_tune_model/: japanese_ner.py
src/core/train_set /: collect_data.py
src/core/train_test_set/: collect_data.py  consts.py  corpus.py  preprocess_part.py
src/data/: processed_data.json  processed_data_ner_task.json  rag_data.md
