[tool.poetry]
name = "ner-county-detection"
version = "0.1.0"
description = ""
authors = ["mborodada <mboroda@lytvynov-production.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
haggle = "^0.1.14"
kaggle = "^1.6.17"
transformers = "^4.48.2"
loguru = "^0.7.3"
pydantic = "^2.10.6"
nltk = "^3.9.1"
fugashi = "^1.4.0"
unidic = "^1.1.0"
protobuf = "^5.29.3"
unidic-lite = "^1.0.8"
stopwordsiso = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
